[MODINVOICE-618]. Cannot edit invoice line comments, subscription info or add tags for invoice lines where budget from prior FY is closed (#573)
* [MODINVOICE-618]. Cannot edit invoice line comments, subscription info or add tags for invoice lines where budget from prior FY is closed

* [MODINVOICE-618]. Fix sonar issue

* [MODINVOICE-618]. Remove example comments

* [MODINVOICE-618]. Remove example comments

* [MODINVOICE-618]. Fix log marker & remove lines